--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,10 @@ textarea {
     height: 100%;
 }
 
+a {
+    text-decoration: none;
+}
+
 a:hover {
     color: #ff8000;
 }
@@ -45,6 +49,7 @@ header a {
 
 main {
     grid-area: main;
+    margin: 3rem;
 }
 
 footer {
@@ -54,4 +59,89 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.content {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 5rem;
+}
+
+.main {
+    flex: 3 60rem;
+}
+
+.sidebar {
+    flex: 1 40rem;
+}
+
+
+/*product*/
+
+.products {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.products li {
+    flex: 0 1 29rem;
+    height: 47rem;
+    padding: 1rem;
+    margin: 5rem;
+    padding: 0;
+}
+
+.product {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.product p {
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.product img {
+    max-width: 40rem;
+    max-height: 40rem;
+}
+
+.product-price {
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.product-price div,
+.product-price button {
+    text-align: center;
+    flex: 1;
+}
+
+.product-price div {
+    font-size: 2rem;
+}
+
+.button {
+    padding: 1rem;
+    border: 0.1rem #c0c0c0 solid;
+    background-color: #f0f0f0;
+    cursor: pointer;
+}
+
+.button:hover {
+    border: 0.1rem #808080 solid;
+}
+
+.button.primary {
+    background-color: #f0c040;
 }
