--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ textarea {
 }
 
 a {
+    color: #000000;
     text-decoration: none;
 }
 
@@ -38,8 +39,9 @@ header {
     background-color: #203040;
     color: #ffffff;
     display: flex;
+    justify-content: center;
     align-items: center;
-    padding: 1rem;
+    padding: 0.5rem;
 }
 
 header a {
@@ -49,7 +51,6 @@ header a {
 
 main {
     grid-area: main;
-    margin: 3rem;
 }
 
 footer {
@@ -64,11 +65,10 @@ footer {
 .content {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 5rem;
 }
 
 .main {
-    flex: 3 60rem;
+    flex: 4 60rem;
 }
 
 .sidebar {
@@ -92,8 +92,7 @@ footer {
     flex: 0 1 29rem;
     height: 47rem;
     padding: 1rem;
-    margin: 5rem;
-    padding: 0;
+    margin-bottom: 3rem;
 }
 
 .product {
@@ -110,8 +109,8 @@ footer {
 }
 
 .product img {
-    max-width: 40rem;
-    max-height: 40rem;
+    max-width: 37rem;
+    max-height: 37rem;
 }
 
 .product-price {
@@ -144,4 +143,20 @@ footer {
 
 .button.primary {
     background-color: #f0c040;
+}
+
+
+/*filter*/
+
+.filter {
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    margin: 1rem;
+    border-bottom: 0.1rem #c0c0c0 solid;
+}
+
+.filter div {
+    flex: 1;
 }
