--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,6 @@ header {
     background-color: #203040;
     color: #ffffff;
     display: flex;
-    justify-content: center;
     align-items: center;
     padding: 0.5rem;
 }
@@ -158,5 +157,64 @@ footer {
 }
 
 .filter div {
+    flex: 1;
+}
+
+
+/*Index.css*/
+
+.cart {
+    padding: 1rem;
+    margin: 1rem;
+    display: flex;
+}
+
+.cart-header {
+    border-bottom: 0.1rem #c0c0c0 solid;
+}
+
+.cart-items {
+    padding: 0;
+    width: 100%;
+    list-style-type: none;
+}
+
+.cart-items img {
+    width: 10rem;
+}
+
+.cart-items li {
+    display: flex;
+}
+
+.cart-items li div {
+    padding: 0.5rem;
+}
+
+.cart-items li div:last-child {
+    flex: 1;
+}
+
+.cart-items li div button {
+    margin-top: 1rem;
+}
+
+.right {
+    text-align: right;
+}
+
+.total {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.total>div {
+    font-size: 2rem;
+}
+
+.total>div,
+.total>button {
     flex: 1;
 }
