--- a/src/index.css
+++ b/src/index.css
@@ -218,3 +218,32 @@ footer {
 .total>button {
     flex: 1;
 }
+
+
+/*CheckOut Form*/
+
+form {
+    width: 100%;
+}
+
+.form-container {
+    width: 100%;
+    padding: 0;
+    list-style-type: none;
+}
+
+.form-container li {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+}
+
+label {
+    margin-bottom: 0.5rem;
+}
+
+input {
+    padding: 1rem;
+    border: 0.1rem #c0c0c0 solid;
+}
